[package]
name = "js-helpers"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Devin Jean <emailcruzjean@yahoo.com>"]
repository = "https://github.com/dragazo/js-helpers-rs"
documentation = "https://docs.rs/js-helpers"
description = "Easy interop utils for js objects in wasm"

[dependencies]
web-sys = { version = "0.3.69", features = ["Window"] }
wasm-bindgen = "0.2.92"

[dev-dependencies]
wasm-bindgen-test = "0.3"
